--- a/build.gradle
+++ b/build.gradle
@@ -8,27 +8,33 @@ plugins {
     // Apply the application plugin to add support for building an application
     id 'application'
 
-    id 'org.springframework.boot' version '2.4.3'
+    id 'org.springframework.boot' version '2.4.2'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 
 
 }
 
-apply plugin: 'io.spring.dependency-management'
-
 
 group 'com.weather.service'
 version '1.0-SNAPSHOT'
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(11)
+    }
+}
+
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux:'
     implementation group: 'io.swagger', name: 'swagger-annotations', version: '1.6.2'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'com.h2database:h2'
-
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
     testImplementation 'org.codehaus.groovy:groovy-all:2.3.11'
     testImplementation group: 'junit', name: 'junit', version: '4.12'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
@@ -36,6 +42,8 @@ dependencies {
     compileOnly  group: 'org.projectlombok', name: 'lombok', version: '1.18.18'
     compileOnly  'org.modelmapper:modelmapper:2.3.2'
     annotationProcessor 'org.projectlombok:lombok:1.18.18'
+    implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.10.5'
+    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.10.5'
 
 }
 
