--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 api.openweathermap.url=http://api.openweathermap.org/data/2.5/weather
-server.servlet.context-path=/api
+server.servlet.context-path=/weather
 spring.datasource.platform=h2
 spring.datasource.url=jdbc:h2:mem:weatherdb
 spring.h2.console.enabled=true
+spring.h2.console.settings.web-admin-password=sa
