--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-webflux:'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation group: 'io.swagger', name: 'swagger-annotations', version: '1.6.2'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'com.h2database:h2'
