--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     compileOnly  group: 'org.projectlombok', name: 'lombok', version: '1.18.18'
     compileOnly  'org.modelmapper:modelmapper:2.3.2'
     annotationProcessor 'org.projectlombok:lombok:1.18.18'
-    implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.10.5'
+    implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
     implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.10.5'
 
 }
