--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -24,12 +24,12 @@ bucket4j:
   enabled: true
   filters:
     - cache-name: api-key-rate-limit
+      http-response-body: '{ "status": 429, "error": "Limit Reached", "message": "You have exceeded the hourly limit" }'
       url: /weather/data/description
-      http-response-body:
-        message: Exceeded Hourly Limits
       rate-limits:
         - expression: getHeader('x-api-key')
+          execute-condition: getHeader('x-api-key').equals('fedfc67ec822c2257583b17d01e423a3') OR getHeader('x-api-key').equals('71793f5b02bb0fe98c7b8720c76cb9f9') OR getHeader('x-api-key').equals('d49ebe764fe53c5ca867f87c1ce9c6c7') OR getHeader('x-api-key').equals('41b8ce2c3caa7d8804dd27bac339fa42') OR getHeader('x-api-key').equals('8eccabe0fad952681a81b7c4f7f2a2d1')
           bandwidths:
-            - capacity: 2
+            - capacity: 3
               time: 10
               unit: minutes
