updated gitignore application yaml

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,12 @@
 ---
-api:
-  openweathermap:
-    url: http://api.openweathermap.org/data/2.5/weather
-  valid:
-    keys: fedfc67ec822c2257583b17d01e423a3,71793f5b02bb0fe98c7b8720c76cb9f9,d49ebe764fe53c5ca867f87c1ce9c6c7,41b8ce2c3caa7d8804dd27bac339fa42,8eccabe0fad952681a81b7c4f7f2a2d1
+weatherapi:
+  url: http://api.openweathermap.org/data/2.5/weather
+  keys:
+    - fedfc67ec822c2257583b17d01e423a3
+    - 71793f5b02bb0fe98c7b8720c76cb9f9
+    - d49ebe764fe53c5ca867f87c1ce9c6c7
+    - 41b8ce2c3caa7d8804dd27bac339fa42
+    - 8eccabe0fad952681a81b7c4f7f2a2d1
 server:
   servlet:
     context-path: /weather
@@ -30,6 +33,6 @@ bucket4j:
         - expression: getHeader('x-api-key')
           execute-condition: getHeader('x-api-key').equals('fedfc67ec822c2257583b17d01e423a3') OR getHeader('x-api-key').equals('71793f5b02bb0fe98c7b8720c76cb9f9') OR getHeader('x-api-key').equals('d49ebe764fe53c5ca867f87c1ce9c6c7') OR getHeader('x-api-key').equals('41b8ce2c3caa7d8804dd27bac339fa42') OR getHeader('x-api-key').equals('8eccabe0fad952681a81b7c4f7f2a2d1')
           bandwidths:
-            - capacity: 3
-              time: 10
-              unit: minutes
+            - capacity: 5
+              time: 1
+              unit: Hours
