--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     implementation group: 'javax.cache',name: 'cache-api'
     implementation group: 'com.github.ben-manes.caffeine',name: 'caffeine',version: '2.8.5'
     implementation group: 'com.github.ben-manes.caffeine',name: 'jcache' , version: '2.8.5'
+    testImplementation group: 'org.spockframework', name: 'spock-core', version: '2.0-M4-groovy-3.0'
+
 
 
 }
