--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation 'com.h2database:h2'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
-    testImplementation 'org.codehaus.groovy:groovy-all:2.3.11'
     testImplementation group: 'junit', name: 'junit', version: '4.12'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
@@ -49,12 +48,10 @@ dependencies {
     implementation group: 'javax.cache',name: 'cache-api'
     implementation group: 'com.github.ben-manes.caffeine',name: 'caffeine',version: '2.8.5'
     implementation group: 'com.github.ben-manes.caffeine',name: 'jcache' , version: '2.8.5'
-    testImplementation group: 'org.spockframework', name: 'spock-core', version: '2.0-M4-groovy-3.0'
+    // Use the Spock for unit testing
+    testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
+    testImplementation 'org.codehaus.groovy:groovy-all:2.5.4'
 
 
 
-}
-
-test {
-    useJUnitPlatform()
 }
