--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
     // Apply the groovy plugin to also add support for Groovy (needed for Spock)
     id 'groovy'
 
+    id 'jacoco'
     // Apply the application plugin to add support for building an application
     id 'application'
 
@@ -39,19 +40,37 @@ dependencies {
     testImplementation group: 'junit', name: 'junit', version: '4.12'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-    compileOnly  group: 'org.projectlombok', name: 'lombok', version: '1.18.18'
-    compileOnly  'org.modelmapper:modelmapper:2.3.2'
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.18'
+    compileOnly 'org.modelmapper:modelmapper:2.3.2'
     annotationProcessor 'org.projectlombok:lombok:1.18.18'
     implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
     implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.10.5'
-    implementation group: 'com.giffing.bucket4j.spring.boot.starter' ,name: 'bucket4j-spring-boot-starter' ,version: '0.2.0'
-    implementation group: 'javax.cache',name: 'cache-api'
-    implementation group: 'com.github.ben-manes.caffeine',name: 'caffeine',version: '2.8.5'
-    implementation group: 'com.github.ben-manes.caffeine',name: 'jcache' , version: '2.8.5'
+    implementation group: 'com.giffing.bucket4j.spring.boot.starter', name: 'bucket4j-spring-boot-starter', version: '0.2.0'
+    implementation group: 'javax.cache', name: 'cache-api'
+    implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '2.8.5'
+    implementation group: 'com.github.ben-manes.caffeine', name: 'jcache', version: '2.8.5'
     // Use the Spock for unit testing
     testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
     testImplementation 'org.codehaus.groovy:groovy-all:2.5.4'
 
 
-
 }
+
+jacocoTestCoverageVerification {
+    violationRules {
+        rule {
+            element = 'CLASS'
+            limit {
+                counter = 'LINE'
+                value = 'COVEREDRATIO'
+                minimum = 1.0
+            }
+            excludes = [
+                    'com.weather.api.Application'
+            ]
+        }
+    }
+}
+
+
+test.finalizedBy jacocoTestReport,jacocoTestCoverageVerification
