--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,6 +16,8 @@ spring:
     url: jdbc:h2:mem:weatherdb
   h2:
     console:
+      settings:
+        web-allow-others: true
       enabled: true
       path: /h2-console
   cache:
